--- a/DoctorForums/Web.config
+++ b/DoctorForums/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -64,8 +64,7 @@
   </entityFramework>
 
   <connectionStrings>
-    <add name="MainDb"
-          providerName="System.Data.SqlClient"
-          connectionString="Data Source=(localdb)\v11.0;Initial Catalog=Haha;Integrated Security=True;"/>
+    <add name="MainDb" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=Haha;Integrated Security=True;"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
