--- a/DoctorForums/Web.config
+++ b/DoctorForums/Web.config
@@ -64,7 +64,13 @@
   </entityFramework>
 
   <connectionStrings>
-    <add name="MainDb" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=Haha;Integrated Security=True;"
+    <add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=test_2;Persist Security Info=True;User ID=sa;Password=1234"
+      providerName="System.Data.SqlClient" />
+    <add name="MainDb" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=Haha;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="test_2ConnectionString" connectionString="Data Source=localhost;Initial Catalog=test_2;User ID=sa;Password=1234"
+      providerName="System.Data.SqlClient" />
+    <add name="doctor_web_forumConnectionString" connectionString="Data Source=localhost;Initial Catalog=doctor_web_forum;User ID=sa;Password=1234"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
