--- a/DoctorForums/Web.config
+++ b/DoctorForums/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -64,6 +64,9 @@
   </entityFramework>
 
   <connectionStrings>
-    <add name="doctor_web_forumConnectionString" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=doctor_web_forum;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="doctor_web_forumConnectionString" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=doctor_web_forum;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="doctor_web_forumConnectionString1" connectionString="Data Source=localhost;Initial Catalog=doctor_web_forum;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
