--- a/DoctorForums/DoctorForums.csproj
+++ b/DoctorForums/DoctorForums.csproj
@@ -402,10 +402,10 @@
     <Content Include="Views\User\Login.cshtml" />
     <Content Include="Views\Rooms\Index.cshtml" />
     <Content Include="Views\Rooms\Details.cshtml" />
+    <Content Include="Views\Topic\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Topic\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
