--- a/DoctorForums/DoctorForums.csproj
+++ b/DoctorForums/DoctorForums.csproj
@@ -400,6 +400,7 @@
     <Content Include="Views\Rooms\Details.cshtml" />
     <Content Include="Views\Topic\Details.cshtml" />
     <Content Include="Views\User\Register.cshtml" />
+    <Content Include="Views\User\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
