--- a/DoctorForums/DoctorForums.csproj
+++ b/DoctorForums/DoctorForums.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\GravatarHtmlHelper.cs" />
     <Compile Include="Helpers\SHA1.cs" />
     <Compile Include="Models\AccountViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
