--- a/DoctorForums/DoctorForums.csproj
+++ b/DoctorForums/DoctorForums.csproj
@@ -405,6 +405,7 @@
     <Content Include="Views\User\Register.cshtml" />
     <Content Include="Views\User\Details.cshtml" />
     <Content Include="Views\ErrorPages\Index.cshtml" />
+    <Content Include="Views\User\Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
