--- a/DoctorForums/DoctorForums.csproj
+++ b/DoctorForums/DoctorForums.csproj
@@ -406,6 +406,7 @@
     <Content Include="Views\User\Details.cshtml" />
     <Content Include="Views\ErrorPages\Index.cshtml" />
     <Content Include="Views\User\Search.cshtml" />
+    <Content Include="Views\Topic\_InteractionView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
